--- a/lp.html
+++ b/lp.html
@@ -7,6 +7,7 @@
   <title>Confeitaria em casa</title>
   <link rel="stylesheet" href="./styles/lp-styles.css">
   <link rel="shortcut icon" href="./images/logosemfundo.png" type="image/x-icon">
+  <script src="https://kit.fontawesome.com/f3ea0fed3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -19,6 +20,25 @@
     <path class="wave-meio" fill="#fab9c4" fill-opacity="1" d="M0,96L48,117.3C96,139,192,181,288,213.3C384,245,480,267,576,256C672,245,768,203,864,208C960,213,1056,267,1152,272C1248,277,1344,235,1392,213.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
     <path class="wave-frente" fill="#ffd4db" fill-opacity="1" d="M0,64L18.5,106.7C36.9,149,74,235,111,234.7C147.7,235,185,149,222,149.3C258.5,149,295,235,332,266.7C369.2,299,406,277,443,250.7C480,224,517,192,554,197.3C590.8,203,628,245,665,272C701.5,299,738,309,775,293.3C812.3,277,849,235,886,208C923.1,181,960,171,997,149.3C1033.8,128,1071,96,1108,122.7C1144.6,149,1182,235,1218,266.7C1255.4,299,1292,277,1329,272C1366.2,267,1403,277,1422,282.7L1440,288L1440,320L1421.5,320C1403.1,320,1366,320,1329,320C1292.3,320,1255,320,1218,320C1181.5,320,1145,320,1108,320C1070.8,320,1034,320,997,320C960,320,923,320,886,320C849.2,320,812,320,775,320C738.5,320,702,320,665,320C627.7,320,591,320,554,320C516.9,320,480,320,443,320C406.2,320,369,320,332,320C295.4,320,258,320,222,320C184.6,320,148,320,111,320C73.8,320,37,320,18,320L0,320Z"></path>
   </svg>
+
+  <div class="finalidade-produto">
+    <p class="titulo-finalidade">Qual a finalidade do nosso produto?</p>
+    
+    <div class="checks-e-device">
+      <div class="checks">
+        <p><i class="fa-sharp fa-solid fa-check"></i> Adquirir uma liberdade financeira vendendo doces!</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Ensinar a produzir seus próprios doces.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Truques valiosos para aumentar a qualidade deles.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Além de aprender receitas, você também aprende precificação, <br>rotina de produção, quais equipamentos usar, e muito mais.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Dicas para você conseguir vender seus produtos.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Baixo custo de produção e margem de lucro alta.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Segredos da confeitaria.</p>
+      </div>
+      <div class="device">
+        <img src="./images/image1.jpeg" alt="phone..." class="tresd-mockup">
+      </div>
+    </div>
+  </div>
 
   <section class="garantia">
     <img src="./images/selogarantia.png" alt="Selo de garantia 30 dias" class="garantia-image">
@@ -90,9 +110,6 @@
   <footer>
     <div class="teste-footer">
       <div class="flex-footer">
-        <!-- <div class="projeto-confeitaria">
-          <p>O Programa Confeitaria em casa, é um produto com o objetivo de ajudar as pessoas a adquirirem uma habilidade de fazer doces em casa e fazê-las conseguirem uma independência financeira. Não afirmamos que ao usar o produto você obterá resultados, os depoimentos mostrados variam de acordo com seu esforço e conhecimento.</p>
-        </div> -->
         <div class="copyright-footer">
           <div class="copyright">
             <img src="./images/logosemfundo.png" alt="logo" width="100px">
