--- a/lp.html
+++ b/lp.html
@@ -47,6 +47,33 @@
     </div>
   </section>
 
+  <div class="card-preco">
+    <div class="card-content">
+      <div class="card-oferta">
+        <h1>Oferta imperdivel</h1>
+      </div>
+      <div class="card-texts">
+        <h2><s>De R$397,00</s></h2>
+        <p>por apenas 7x de</p>
+        <h1>R$<span class="font-alta">10</span>,<span class="cinco-cinco">55</span></h1>
+        <p>ou R$74,90 à vista</p>
+        <a href="#" class="btn-card-preco">Garantir minha vaga!</a>
+        <p class="contador-p">Você está perdendo <strong>tempo</strong>!</p>
+        <div class="card-contador">
+          <div class="contador-minutos">
+            <p>Minutos</p>
+            <span id="minutos">7</span>  
+          </div>
+          <div class="contador-segundos">
+            <p>Segundos</p>
+            <span id="segundos">59</span>
+          </div>
+        </div>
+        <img src="./images/comprasegura.png" alt="Compra totalmente segura" class="compra-segura">
+      </div>
+    </div>
+  </div>
+
   <section id="qaa">
     <h2 class="title">Perguntas <br>frequentes</h2>
 
