--- a/lp.html
+++ b/lp.html
@@ -22,13 +22,13 @@
   </svg>
 
   <div class="finalidade-produto">
-    <p class="titulo-finalidade">Qual a finalidade do nosso produto?</p>
+    <p class="titulo-finalidade">Porque comprar nosso produto?</p>
     
     <div class="checks-e-device">
       <div class="checks">
-        <p><i class="fa-sharp fa-solid fa-check"></i> Adquirir uma liberdade financeira vendendo doces!</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Adquirir uma liberdade financeira!</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Ensinar a produzir seus próprios doces.</p>
-        <p><i class="fa-sharp fa-solid fa-check"></i> Truques valiosos para aumentar a qualidade deles.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Truques valiosos para aumentar a qualidade.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Além de aprender receitas, você também aprende precificação, <br>rotina de produção, quais equipamentos usar, e muito mais.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Dicas para você conseguir vender seus produtos.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Baixo custo de produção e margem de lucro alta.</p>
@@ -79,23 +79,23 @@
 
     <div class="faq">
       <div class="question">
-        <h3>Quais métodos de pagamento posso utilizar para adquirir o conteúdo?</h3>
+          <h3>O que eu estou adquirindo?</h3>
       </div>
       <div class="answer">
-        <p>Você pode adquirir o nosso produto através do PayPal, PIX, Boleto e Cartão de crédito e débito.</p>
+        <p>O programa "Confeitaria em casa: como ganhar dinheiro fazendo doces" é o guia definitivo para quem está precisando fazer uma renda extra no final do mês ou até mesmo para quem está precisando de um emprego definitivo. Através de um ebook simples, você irá aprender as técnicas e receitas mais eficazes e avançadas, utilizadas por mim e por diversas doceiras do Brasil.</p>
       </div>
     </div>
 
     <div class="faq">
       <div class="question">
-        <h3>Após comprar, como faço para ter acesso ao conteúdo?</h3>
+        <h3>Como faço para ter acesso ao conteúdo?</h3>
       </div>
       <div class="answer">
         <p>Nosso conteúdo será enviado para o email utilizado na compra após o pagamento ser aprovado e totalmente analisado.</p>
       </div>
      </div>
 
-    <div class="faq">
+     <div class="faq">
       <div class="question">
         <h3>Por quanto tempo terei acesso ao conteúdo?</h3>
       </div>
@@ -109,25 +109,16 @@
         <h3>A compra do conteúdo é totalmente segura?</h3>
       </div>
       <div class="answer">
-        <p>Sim, todos os dados utilizados na hora da compra não são armazenados, além disso você tem total garantia sob nosso conteúdo durante 30 dias, podendo pedir reembolso a qualquer hora.</p>
+        <p>Sim, todos os dados utilizados na hora da compra não são armazenados, além disso você tem total garantia sob nosso conteúdo durante 15 dias, podendo pedir reembolso a qualquer hora.</p>
       </div>
     </div>
 
     <div class="faq">
       <div class="question">
-          <h3>O que eu estou adquirindo?</h3>
+        <h3>Quais métodos de pagamento disponíveis?</h3>
       </div>
       <div class="answer">
-        <p>O programa "Confeitaria em casa: como ganhar dinheiro fazendo doces" é o guia definitivo para quem está precisando fazer uma renda extra no final do mês ou até mesmo para quem está precisando de um emprego definitivo. Através de um ebook simples, você irá aprender as técnicas e receitas mais eficazes e avançadas, utilizadas por mim e por diversas doceiras do Brasil.</p>
-      </div>
-    </div>
-
-    <div class="faq">
-      <div class="question">
-        <h3>E se eu não tiver tempo?</h3>
-      </div>
-      <div class="answer">
-        <p>Terá tempo sim. A sua saúde deve está em primeiro lugar! Afinal, a ansiedade nos rouba tempo e qualidade de vida. Então, basta tirar poucos minutos por dia para apreciar o programa e, dessa forma, Vencer a Ansiedade.</p>
+        <p>Você pode adquirir o nosso produto através do PayPal, PIX, Boleto e Cartão de crédito e débito.</p>
       </div>
     </div>
     <a href="#" class="footer-btn">Eu quero meu desconto!</a>
