Ajustes de português 08/03/2023

--- a/lp.html
+++ b/lp.html
@@ -50,7 +50,7 @@
   <div class="card-preco">
     <div class="card-content">
       <div class="card-oferta">
-        <h1>Oferta imperdivel</h1>
+        <h1>Oferta imperdível</h1>
       </div>
       <div class="card-texts">
         <h2><s>De R$397,00</s></h2>
