--- a/pagina-segura.html
+++ b/pagina-segura.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página segura - Confeitaria em casa</title>
+  <title>Página segura - CEC</title>
   <link rel="stylesheet" href="./styles/ps-styles.css">
   <link rel="shortcut icon" href="./images/logosemfundo.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/f3ea0fed3d.js" crossorigin="anonymous"></script>
