Ajustes nos textos 09/03/2023

--- a/lp.html
+++ b/lp.html
@@ -26,11 +26,11 @@
     
     <div class="checks-e-device">
       <div class="checks">
-        <p><i class="fa-sharp fa-solid fa-check"></i> Adquirir uma liberdade financeira!</p>
-        <p><i class="fa-sharp fa-solid fa-check"></i> Ensinar a produzir seus próprios doces.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Adquirir liberdade financeira!</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Produzir seus próprios doces.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Truques valiosos para aumentar a qualidade.</p>
-        <p><i class="fa-sharp fa-solid fa-check"></i> Além de aprender receitas, você também aprende precificação, <br>rotina de produção, quais equipamentos usar, e muito mais.</p>
-        <p><i class="fa-sharp fa-solid fa-check"></i> Dicas para você conseguir vender seus produtos.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Aprender receitas, precificação, rotina de produção, <br>quais equipamentos usar, e muito mais.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Dicas para vender seus produtos.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Baixo custo de produção e margem de lucro alta.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Segredos da confeitaria.</p>
       </div>
