Ajustes nos textos 09/03/2023

--- a/lp.html
+++ b/lp.html
@@ -31,7 +31,7 @@
         <p><i class="fa-sharp fa-solid fa-check"></i> Truques valiosos para aumentar a qualidade.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Aprender receitas, precificação, rotina de produção, <br>quais equipamentos usar, e muito mais.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Dicas para vender seus produtos.</p>
-        <p><i class="fa-sharp fa-solid fa-check"></i> Baixo custo de produção e margem de lucro alta.</p>
+        <p><i class="fa-sharp fa-solid fa-check"></i> Diminuir o custo de produção e aumentando sua margem de lucro.</p>
         <p><i class="fa-sharp fa-solid fa-check"></i> Segredos da confeitaria.</p>
       </div>
       <div class="device">
