--- a/lp.html
+++ b/lp.html
@@ -47,6 +47,14 @@
     </div>
   </section>
 
+  <div class="confeitaria">
+    <img src="./images/confeitaria.png" alt="Bolo confeitaria" class="confeitaria-bolo">
+    <div class="confeitaria-textos">
+      <h1>APRENDA AGORA!</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem explicabo nesciunt consequatur accusamus, quo molestias nisi officiis illo? Quae cumque omnis laudantium magnam error molestias aut eaque quod, praesentium fuga. Lorem ipsum dolor, sit amet consectetur adipisicing elit. A ratione libero ut molestiae aliquid aspernatur ducimus voluptates assumenda voluptatum numquam? Explicabo similique deserunt tenetur obcaecati maiores, perspiciatis amet quisquam laboriosam.</p>
+    </div>
+  </div>
+
   <div class="card-preco">
     <div class="card-content">
       <div class="card-oferta">
