--- a/lp.html
+++ b/lp.html
@@ -51,7 +51,7 @@
     <img src="./images/confeitaria.png" alt="Bolo confeitaria" class="confeitaria-bolo">
     <div class="confeitaria-textos">
       <h1>APRENDA AGORA!</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem explicabo nesciunt consequatur accusamus, quo molestias nisi officiis illo? Quae cumque omnis laudantium magnam error molestias aut eaque quod, praesentium fuga. Lorem ipsum dolor, sit amet consectetur adipisicing elit. A ratione libero ut molestiae aliquid aspernatur ducimus voluptates assumenda voluptatum numquam? Explicabo similique deserunt tenetur obcaecati maiores, perspiciatis amet quisquam laboriosam.</p>
+      <p>Sem chefe para ficar te desmotivando porque você não faz as coisas no jeito que ele quer, você dar tudo de si no trabalho e no fim do mês ganhar um mísero salário... Esqueça isso, eu tenho a oportunidade de você se divertir fazendo seus doces além de conseguir uma renda extra, e o melhor, sem chefe para ficar te desmotivando... Venha conhecer a Confeitaria em casa, nós te ensinamos como você pode fazer tudo isso sem ninguém ficar no seu pé o ano todo.</p>
     </div>
   </div>
 
