Card depoimentos adicionado 10/03/2023

--- a/lp.html
+++ b/lp.html
@@ -21,6 +21,7 @@
     <path class="wave-frente" fill="#ffd4db" fill-opacity="1" d="M0,64L18.5,106.7C36.9,149,74,235,111,234.7C147.7,235,185,149,222,149.3C258.5,149,295,235,332,266.7C369.2,299,406,277,443,250.7C480,224,517,192,554,197.3C590.8,203,628,245,665,272C701.5,299,738,309,775,293.3C812.3,277,849,235,886,208C923.1,181,960,171,997,149.3C1033.8,128,1071,96,1108,122.7C1144.6,149,1182,235,1218,266.7C1255.4,299,1292,277,1329,272C1366.2,267,1403,277,1422,282.7L1440,288L1440,320L1421.5,320C1403.1,320,1366,320,1329,320C1292.3,320,1255,320,1218,320C1181.5,320,1145,320,1108,320C1070.8,320,1034,320,997,320C960,320,923,320,886,320C849.2,320,812,320,775,320C738.5,320,702,320,665,320C627.7,320,591,320,554,320C516.9,320,480,320,443,320C406.2,320,369,320,332,320C295.4,320,258,320,222,320C184.6,320,148,320,111,320C73.8,320,37,320,18,320L0,320Z"></path>
   </svg>
 
+  <!-- Porque comprar nosso produto -->
   <div class="finalidade-produto">
     <p class="titulo-finalidade">Porque comprar nosso produto?</p>
     
@@ -40,6 +41,7 @@
     </div>
   </div>
 
+  <!-- Confeitaria -->
   <div class="confeitaria">
     <img src="./images/confeitaria.png" alt="Bolo confeitaria" class="confeitaria-bolo">
     <div class="confeitaria-textos">
@@ -48,6 +50,7 @@
     </div>
   </div>
 
+  <!-- Garantia -->
   <section class="garantia">
     <img src="./images/selogarantia.png" alt="Selo de garantia 30 dias" class="garantia-image">
     <div class="garantia-textos">
@@ -55,6 +58,38 @@
     </div>
   </section>
 
+  <h1 class="depoimento-heading">DEPOIMENTOS</h1>
+    <h1 class="sub-depoimento-heading">DE CLIENTES</h1>
+  <!-- Depoimento -->
+  <div class="depoimentos-container">
+    <div class="depoimentos-cards">
+      <div class="dp-card01 card-semmargin">
+        <div class="dp-card01-texts">
+          <img src="./images/depoimentos/depoimento1.jpg" alt="Foto Marcos de souza" class="depoimento-foto">
+          <div class="dp-card01-infos">
+            <h1>Marcos de Souza</h1>
+            <p>Gostaria de agradecer pelo trabalho incrível que vocês fizeram, produto realmente inovador.</p>
+            <img src="./images/depoimentos/stars.png" alt="Estrelas de avaliação" class="depoimento-stars">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="depoimentos-cards">
+      <div class="dp-card01 card-mg-top">
+        <div class="dp-card01-texts">
+          <img src="./images/depoimentos/depoimento2.jpg" alt="Foto Marcos de souza" class="depoimento-foto">
+          <div class="dp-card01-infos">
+            <h1>Silvia Rutkoski</h1>
+            <p>Obrigada pelo produto, me ajudou demais a ter um dinheiro a mais no final do mês.</p>
+            <img src="./images/depoimentos/stars.png" alt="Estrelas de avaliação" class="depoimento-stars">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card preço -->
   <div class="card-preco">
     <div class="card-content">
       <div class="card-oferta">
@@ -82,6 +117,7 @@
     </div>
   </div>
 
+  <!-- Perguntas e respostas -->
   <section id="qaa">
     <h2 class="title">Perguntas <br>frequentes</h2>
 
@@ -132,6 +168,7 @@
     <a href="#" class="footer-btn">Eu quero meu desconto!</a>
   </section>
 
+  <!-- Footer -->
   <footer>
     <div class="flex-footer">
       <div class="copyright-footer">
