Cards depoimentos adicionados 10/03/2023

--- a/lp.html
+++ b/lp.html
@@ -89,6 +89,19 @@
     </div>
   </div>
 
+  <div class="depoimentos-cards">
+    <div class="dp-card01 card-mg-top2 card-mg-bottom">
+      <div class="dp-card01-texts">
+        <img src="./images/depoimentos/depoimento3.jpg" alt="Foto Marcos de souza" class="depoimento-foto">
+        <div class="dp-card01-infos">
+          <h1>Daniela Dalke</h1>
+          <p>Obrigadaaaa!! Consegui dinheiro para pagar os estudos dos meus filhos, incrível.</p>
+          <img src="./images/depoimentos/stars.png" alt="Estrelas de avaliação" class="depoimento-stars">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Card preço -->
   <div class="card-preco">
     <div class="card-content">
