--- a/lp.html
+++ b/lp.html
@@ -11,6 +11,9 @@
 </head>
 <body>
   <header>
+    <div class="loc">
+      <p>Você e mais algumas pessoas próximas de <span id="colocarGeo">Carregando ...</span> foram selecionados para esta oferta.</p>
+    </div>
     <h1>DESCUBRA COMO EM <span class="enfase">1 MÊS</span> EU GANHEI <span class="enfase">MAIS DE 3 SALÁRIOS MÍNIMOS</span> FAZENDO O QUE <span class="enfase">EU GOSTO</span><b style="font-weight: 900;">!</b></h1>
     <iframe src="youtube.com" frameborder="0" class="frame-vsl"></iframe>
   </header>
