Se for usar delay 11/03/2023

--- a/lp.html
+++ b/lp.html
@@ -10,6 +10,13 @@
   <script src="https://kit.fontawesome.com/f3ea0fed3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+  <!--
+    SE FOR FAZER COM DELAY USAR
+    
+    DELAY COM DISPLAY NONE / BLOCK
+   -->
+
   <header>
     <div class="loc">
       <p>Você e mais algumas pessoas próximas de <span id="city">Carregando ...</span> foram selecionados para esta oferta.</p>
