--- a/lp.html
+++ b/lp.html
@@ -56,7 +56,7 @@
     <img src="./images/confeitaria.png" alt="Bolo confeitaria" class="confeitaria-bolo">
     <div class="confeitaria-textos">
       <h1>APRENDA AGORA!</h1>
-      <p>Sem chefe para ficar te desmotivando porque você não faz as coisas no jeito que ele quer, você dar tudo de si no trabalho e no fim do mês ganhar um mísero salário... Esqueça isso, eu tenho a oportunidade de você se divertir fazendo seus doces além de conseguir uma renda extra, e o melhor, sem chefe para ficar te desmotivando... Venha conhecer a <strong>Confeitaria em casa</strong>, nós te ensinamos como você pode fazer tudo isso sem ninguém ficar no seu pé o ano todo.</p>
+      <p>Saia do pensamento de escravidão que o "Seu chefe" quem manda, vire seu(sua) próprio(a) chefe(a)... Sem chefe para ficar te desmotivando porque você não faz as coisas no jeito que ele quer, você dar tudo de si no trabalho e no fim do mês ganhar um mísero salário... Esqueça isso, eu tenho a oportunidade de você se divertir fazendo seus doces além de conseguir uma renda extra, e o melhor, sem chefe para ficar te desmotivando... Descubra como e conheça a <strong>Confeitaria em casa</strong>, nós te ensinamos como você pode fazer tudo isso sem ninguém ficar no seu pé o ano todo.</p>
     </div>
   </div>
 
