--- a/lp.html
+++ b/lp.html
@@ -198,7 +198,7 @@
         <div class="copyright">
           <img src="./images/logosemfundo.png" alt="logo" width="100px">
           <p>Copyright 2023 - Confeitaria em casa ®</p>
-          <p>Todos os direitos reservados.</p>
+          <p>Todos os direitos reservados Flunt.</p>
         </div>
         <div class="termos-politicas">
           <a href="#">Termos de Uso</a> ・ 
@@ -206,7 +206,7 @@
         </div>
       </div>
       <div class="projeto-confeitaria">
-        <p>O Programa Confeitaria em casa, é um produto com o objetivo de ajudar as pessoas a adquirirem umahabilidade de fazer doces em casa e fazê-las conseguirem uma independência financeira. Não afirmamos que aousar o produto você obterá resultados, os depoimentos mostrados variam de acordo com seu esforço econhecimento.</p>
+        <p>O Programa Confeitaria em casa, é um produto com o objetivo de ajudar as pessoas a adquirirem uma habilidade de fazer doces em casa e fazê-las conseguirem uma independência financeira. Não afirmamos que aousar o produto você obterá resultados, os depoimentos mostrados variam de acordo com seu esforço econhecimento.</p>
       </div>
     </div>
 
