Ajustes no js e card 27/04/2023

--- a/lp.html
+++ b/lp.html
@@ -128,11 +128,11 @@
         <div class="card-contador">
           <div class="contador-minutos">
             <p>Minutos</p>
-            <span id="minutos">14</span>  
+            <span id="minutos">...</span>  
           </div>
           <div class="contador-segundos">
             <p>Segundos</p>
-            <span id="segundos">00</span>
+            <span id="segundos">...</span>
           </div>
         </div>
         <img src="./images/comprasegura.png" alt="Compra totalmente segura" class="compra-segura">
