--- a/lp.html
+++ b/lp.html
@@ -22,7 +22,7 @@
       <p>Você e mais algumas pessoas próximas de <span id="city">Carregando ...</span> foram selecionados para esta oferta.</p>
     </div>
     <h1>DESCUBRA COMO EM <span class="enfase">1 MÊS</span> EU GANHEI <span class="enfase">MAIS DE 3 SALÁRIOS MÍNIMOS</span> FAZENDO O QUE <span class="enfase">EU GOSTO</span><b style="font-weight: 900;">!</b></h1>
-    <iframe src="youtube.com" frameborder="0" class="frame-vsl"></iframe>
+    <p>Teste</p>
   </header>
 
   <svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -33,7 +33,7 @@
 
   <!-- Porque comprar nosso produto -->
   <div class="finalidade-produto">
-    <p class="titulo-finalidade">Porque comprar nosso produto?</p>
+    <p class="titulo-finalidade">Porque aprender conosco?</p>
     
     <div class="checks-e-device">
       <div class="checks">
@@ -46,7 +46,7 @@
         <p><i class="fa-sharp fa-solid fa-check"></i> Segredos da confeitaria.</p>
       </div>
       <div class="device">
-        <img src="./images/image1.jpeg" alt="phone..." class="tresd-mockup">
+        <img src="./images/phone.png" alt="phone..." class="tresd-mockup">
       </div>
     </div>
   </div>
