--- a/lp.html
+++ b/lp.html
@@ -88,7 +88,7 @@
     <div class="depoimentos-cards">
       <div class="dp-card01 card-mg-top">
         <div class="dp-card01-texts">
-          <img src="./images/depoimentos/depoimento2.jpg" alt="Foto Marcos de souza" class="depoimento-foto">
+          <img src="./images/depoimentos/depoimento2.jpg" alt="Foto Silvia Rutkoski" class="depoimento-foto">
           <div class="dp-card01-infos">
             <h1>Silvia Rutkoski</h1>
             <p>Obrigada pelo produto, me ajudou demais a ter um dinheiro a mais no final do mês.</p>
@@ -102,7 +102,7 @@
   <div class="depoimentos-cards">
     <div class="dp-card01 card-mg-top2 card-mg-bottom">
       <div class="dp-card01-texts">
-        <img src="./images/depoimentos/depoimento3.jpg" alt="Foto Marcos de souza" class="depoimento-foto">
+        <img src="./images/depoimentos/depoimento3.jpg" alt="Foto Daniela Dalke" class="depoimento-foto">
         <div class="dp-card01-infos">
           <h1>Daniela Dalke</h1>
           <p>Obrigadaaaa!! Consegui dinheiro para pagar os estudos dos meus filhos, incrível.</p>
