--- a/lp.html
+++ b/lp.html
@@ -21,8 +21,20 @@
     <div class="loc">
       <p>Você e mais algumas pessoas próximas de <span id="city">Carregando ...</span> foram selecionados para esta oferta.</p>
     </div>
-    <h1>DESCUBRA COMO EM <span class="enfase">1 MÊS</span> EU GANHEI <span class="enfase">MAIS DE 3 SALÁRIOS MÍNIMOS</span> FAZENDO O QUE <span class="enfase">EU GOSTO</span><b style="font-weight: 900;">!</b></h1>
-    <p>Teste</p>
+    <h1>DESCUBRA COMO <span class="enfase">GANHEI MAIS DE 3 SALÁRIOS MÍNIMOS EM 27 DIAS</span> <span class="enfase-black">FAZENDO O QUE</span> EU <span class="enfase-black">GOSTO</span>!</h1>
+    <div class="textos-carta">
+      <p>Você deve ta se perguntando se <span class="enfase">é possível ganhar dinheiro</span> fazendo <span class="enfase-black">o que você</span> realmente <span class="enfase-black">gosta de fazer</span>, <span class="enfase">e eu digo que é</span>, pois, eu fiz <span class="enfase">mais de 3 SALÁRIOS em menos de 27 dias</span> e <span class="enfase-black">vou te mostrar como eu fiz isso</span> com doces.</p>
+
+      <p>Você vai aprender a fazer sua renda <span class="enfase">sem precisar aparecer</span>, apenas fazendo doces e vendendo online, vou te ensinar a produzir seus doces <span class="enfase-black">milionários</span> que se bem vendido irá <span class="enfase-black">fazer você faturar</span> até meio <span class="enfase">MILHÃO DE REAIS</span>, Mas como eu sei disso? Porque tenho <span class="enfase">truques valiosos</span> que <span class="enfase-black">aumentam muito a qualidade do meu produto</span> e consequentemente eu <span class="enfase">vendo muito todos os dias</span>.</p>
+
+      <p><span class="enfase-black">Além de vender muito</span> e <span class="enfase">nunca mais depender do CLT</span>, <span class="enfase-black">você será</span> seu <span class="enfase-black">próprio chefe</span> e poderá <span class="enfase-black">ser livre</span> seguindo sua carreira e <span class="enfase">construindo sua riqueza</span> em cima do <span class="enfase-black">seu negócio de doces</span>, vamos também te ensinar a <span class="enfase-black">diminuir gastos com produção</span> assim <span class="enfase-black">aumentando</span> ainda mais <span class="enfase-black">seu lucro</span>, <span class="enfase">já imaginou você ganhando muito dinheiro</span> e ainda por cima <span class="enfase-black">gastar quase nada para produzir seus doces?</span></p>
+
+      <p>Você terá acesso à <span class="enfase-black">lista de</span> <span class="enfase">fornecedores milionários</span>, também terá uma <span class="enfase-black">lista de empresas</span> para <span class="enfase-black">entrar em contato</span> e <span class="enfase">melhorar ainda mais seu negócio</span>.</p>
+      
+      <p><span class="enfase-black">Está pronto(a)</span> para embarcar nesse <span class="enfase-black">novo negócio</span> e <span class="enfase">ficar milionário(a)</span> com <span class="enfase-black">sua empresa de doces?</span> <span class="enfase">Você não vai ter mais chefe te desmotivando</span> e te <span class="enfase">enchendo o saco todo santo dia</span> sabe o porquê? <span class="enfase">Você será seu próprio chefe</span>.</p>
+
+      <p><span class="enfase-black">Essa oportunidade</span> que estou te dando <span class="enfase">ficará disponível por pouco tempo</span>, pois tem <span class="enfase">fábricas de doces que estão tentando derrubar nossa pagina</span>, então <span class="enfase-black">espero que você não perca essa chance</span> que <span class="enfase">pode mudar sua vida</span>. <span class="enfase-black">Seu futuro depende da sua decisão atual</span>, se você <span class="enfase-black">não quer ficar ganhando um mísero salário pro resto da vida</span> <span class="enfase">já sabe qual decisão tomar</span>. Te espero em <span class="enfase-black">nosso curso</span>, e se <span class="enfase-black">você não entrar fico triste em te informar</span>, <span class="enfase">você infelizmente</span> vai ficar <span class="enfase">"escravo" do seu chefe pro resto da vida</span>.</p>
+    </div>
   </header>
 
   <svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
