--- a/lp.html
+++ b/lp.html
@@ -22,7 +22,7 @@
       <p>Você e mais algumas pessoas próximas de <span id="city">Carregando ...</span> foram selecionados para esta oferta.</p>
     </div>
     <h1>DESCUBRA COMO <span class="enfase">GANHEI MAIS DE 3 SALÁRIOS MÍNIMOS EM 27 DIAS</span> <span class="enfase-black">FAZENDO O QUE</span> EU <span class="enfase-black">GOSTO</span>!</h1>
-    <iframe src="youtube.com" frameborder="0"></iframe>
+    <iframe class="iframe" src="youtube.com" frameborder="0"></iframe>
   </header>
 
   <svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
